# mp3-split

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  mp3-split  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
mp3_split/: __init__.py
test/: quiet_storm.yaml
